@@ -1,3 +1,12 @@
+2011-05-21  Bruno Haible  <bruno@clisp.org>
+
+	relocatable-prog-wrapper: Fix possible link error.
+	* m4/setenv.m4 (gl_FUNC_SETENV_SEPARATE): Move determination of
+	HAVE_SETENV and REPLACE_SETENV and AC_LIBOBJ invocation from here...
+	(gl_FUNC_SETENV): ... to here.
+	* m4/canonicalize.m4 (gl_CANONICALIZE_LGPL_SEPARATE): Update comment.
+	* m4/readlink.m4 (gl_FUNC_READLINK_SEPARATE): Likewise.
+
 2011-05-20  Jim Meyering  <meyering@redhat.com>
 
 	maint: replace misused "a" with "an"
